--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
         }
     </style>
 </head>
-<body onload="postUserCoordinates()">
+<body>
     <script>
         let previousQuestionContainer;
         let previouReplyContainer;
@@ -136,16 +136,16 @@
                 document.getElementById("lat_question").value = lat;
             });
         }
-
-        function postUserCoordinates() {
-            navigator.geolocation.getCurrentPosition(position => { 
-                const lat = position.coords.latitude;
-                const long = position.coords.longitude;
-                document.getElementById("long_viewer").value = long;
-                document.getElementById("lat_viewer").value = lat;
-                document.forms['get-coordinates'].submit();
-            });
-        }
+        // onload="postUserCoordinates()"
+        // function postUserCoordinates() {
+        //     navigator.geolocation.getCurrentPosition(position => { 
+        //         const lat = position.coords.latitude;
+        //         const long = position.coords.longitude;
+        //         document.getElementById("long_viewer").value = long;
+        //         document.getElementById("lat_viewer").value = lat;
+        //         document.forms['get-coordinates'].submit();
+        //     });
+        // }
     </script>
 
     <%- include('partials/header.ejs') %>
