--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,8 +11,11 @@
     <script src="saveLocation.js"></script>
     <script src="jwt-decode.js"></script>
     <script src="script.js"></script>
+    <script type="module" src="map.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <meta name="google-signin-client_id" content="859550291312-jmcarebfcc8hrqkq4c1p7t5qt5cj7l5f.apps.googleusercontent.com">
 
     <title>Rellit</title>
@@ -100,6 +103,9 @@
             margin-bottom: 10px;
             box-sizing: inherit;
         }
+        #map{
+            height:650px;
+        }
     </style>
 </head>
 <body>
@@ -141,7 +147,7 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">       
           <div class="row">
-            <div class="col-sm p-3 mb-2 bg-secondary text-white">
+            <div id="map" class="col-sm p-3 mb-2 bg-secondary text-white">
               MAP
             </div>
             <div class="column-2 col-sm p-3 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
@@ -192,6 +198,9 @@
             return time.toString().slice(0, 21);
         }
     %>
-    
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAne4VuS-kDNrI6kLzyzmdhQIs8j6ao7Q&callback=initMap&v=weekly"
+      defer
+    ></script>
 </body>
 </html>
