--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
             font-weight: 700;
         }
         button{
-            /* margin-top: 10px;
+            margin-top: 10px;
             color: #ffffff;
             width: 100%;
             text-align: center;
@@ -81,7 +81,7 @@
             padding: 10px 0px 10px 0px;
             font-size: 16px;
             outline: 0;
-            cursor: pointer; */
+            cursor: pointer;
         }
         .orange-button{
             background-color: linear-gradient(rgb(100, 133, 143), lightskyblue);
@@ -141,7 +141,7 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">       
           <div class="row">
-            <div class="d-none d-lg-block col-sm mx-2 p-3 mb-2 bg-secondary text-white">
+            <div class="d-none d-lg-block col-5 mx-2 p-3 mb-2 bg-secondary text-white">
               MAP
             </div>
             <div class="col-sm mx-2 p-3 mb-23 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
