--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,6 +70,10 @@
         .column-2 {
             background-color: #5bc0de;
         }
+        #map-column {
+            padding:0;
+            margin:0;
+        }
         body {
             font-family: sans-serif;
             background-color: rgb(238,174,202);
@@ -109,6 +113,8 @@
         }
         #map{
             height:650px;
+            margin:0;
+            padding:0;            
         }
     </style>
 </head>
@@ -179,8 +185,21 @@
     <%- include('partials/header.ejs') %>
     <div class="container mt-5">       
           <div class="row">
-            <div id="map" class="col-sm p-3 mb-2 bg-secondary text-white">
-              MAP
+            <div class="col-sm p-3 mb-2 bg-secondary text-white" id="map-column">
+                <div class="dropdown show">
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Select City
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                      <a class="dropdown-item" href="/faq">Toronto</a>
+                      <a class="dropdown-item" href="#">Atlanta</a>
+                      <a class="dropdown-item" href="#">Quebec City</a>
+                      <a class="dropdown-item" href="#">New York</a>
+                    </div>
+                </div>
+                <div id="map">
+
+                </div>
             </div>
             <div class="column-2 col-sm p-3 mb-2 text-dark" style="background: radial-gradient(circle, rgb(251, 252, 253)  0%, rgb(61, 114, 173) 100%)">
               <form method="POST" action="/new-question" class="form-group" id="ask-question">
